app/styles/main.scss
@import 'keyframes';

// bower:scss
// endbower

html, body {
  overflow: hidden;
}

body {
  background: #000;
  font-family: Roboto Condensed, 'Helvetica Neue', Helvetica, Arial, sans-serif;
  color: #333;
  margin: 0;

  h1 {
    z-index: 2;
    color: #f8f8f8;
    font-size: 50vh;
    line-height: 100vh;
    margin: 0 auto;
    padding-left: 5vw;
    vertical-align: middle;
    font-weight: 200;
  }

  section, #renderer_container {
    display: flex;
    flex: 1;
    justify-content: center;
    align-items: center;

    position: absolute;
    top: 0;
    left: 0;
    height: 100vh;
    width: 100vw;
    color: #fff;
  }

  div#progress {
    height: 4px;
    width: 100vw;
    position: absolute;
    bottom: 0;
    background-color: #fff;
    z-index: 200;
    transform: scaleX(0);

    transition: transform .25s ease-out, opacity .3s ease-in-out;

    &.done {
      opacity: 0;
    }
  }

  #renderer_container canvas {
    -webkit-transition: opacity 1s ease-in-out .5s;
    transition: opacity 1s ease-in-out .5s;
  }

  section, canvas {
    justify-content: space-between;
    flex-direction: column;
    align-items: center;
    cursor: pointer;
    z-index: 2;
    opacity: 0;

    -webkit-transition: opacity 1s ease-in-out, transform 1.05s ease-out;
    transition: opacity 1s ease-in-out, transform 1.05s ease-out;

    div {
      flex: 1 0 30%;
      display:flex;
      align-content: center;

      font-size: 6vh;
      font-weight:100;
      text-transform: uppercase;
      -webkit-font-smoothing: antialiased;

      span { align-self: center; }
      &:first-child span {
        align-self: flex-end;
        opacity: .7;
      }
      &:nth-child(2) {
        opacity: .7;
      }
      &:last-child span {
        align-self: flex-start;

        -webkit-animation: 1s ease-in-out 0 infinite pulse;
        -moz-animation:    1s ease-in-out 0 infinite pulse;
        -o-animation:      1s ease-in-out 0 infinite pulse;
        animation:         1s ease-in-out 0 infinite pulse;
      }
    }
  }

  video {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    opacity: 0;
    display: none;
    /*z-index: 2;*/

    -webkit-transition: opacity 1s ease-in-out 1s;
    transition: opacity 1s ease-in-out 1s;
  }

  &.videoLoaded {
    video {
      opacity: 1;
    }

    canvas {
      opacity: 1;

      -webkit-animation: 1s linear 1.1s 1 appear;
      -moz-animation:    1s linear 1.1s 1 appear;
      -o-animation:      1s linear 1.1s 1 appear;
      animation:         1s linear 1.1s 1 appear;
    }

    section {
      -webkit-transition: none;
      transition: none;

      -webkit-animation: 1s linear 1.1s 1 disappear;
      -moz-animation:    1s linear 1.1s 1 disappear;
      -o-animation:      1s linear 1.1s 1 disappear;
      animation:         1s linear 1.1s 1 disappear;

      div {
        opacity: 0;
        transform: translateY(10px);

        &:nth-child(1) {
          transition: opacity 1s ease-in-out, transform 1.05s ease-out;
        }

        &:nth-child(2) {
          transition: opacity .75s ease-in-out, transform .8s ease-out;
        }

        &:nth-child(3) {
          transition: opacity .5s ease-in-out, transform .6s ease-out;
        }
      }
    }
  }
}
.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}


@include keyframes( pulse ) {
  0% {
    -webkit-transform: scale(1);
    opacity: 0.7;
  }
  50% {
    -webkit-transform: scale(1.005);
    opacity: 0.8;
  }
  100% {
    -webkit-transform: scale(1);
    opacity: 0.7;
  }
}

@include keyframes ( disappear )
{
    0% { display: block;  }
    100% { display: none; }
}

@include keyframes ( disappear )
{
    0% { display: block;  }
    100% { display: none; }
}

*::-webkit-media-controls-play-button,
*::-webkit-media-controls-start-playback-button {
    opacity: 0;
    pointer-events: none;
    width: 5px;
}

